src/objects/fflbx__LockboxProcessSetting__c.object
<CustomObject>
    <customHelpPage>fflbx__lockboxprocesssettinghelp</customHelpPage>
    <fields>
        <fullName>fflbx__ClassName__c</fullName>
        <label>Class Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__Namespace__c</fullName>
        <label>Namespace</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__ProgramType__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Cash Entry</fullName>
                </value>
                <value>
                    <fullName>Cash Matching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lockbox Process Setting</label>
    <listViews>
        <fullName>fflbx__All</fullName>
        <columns>NAME</columns>
        <columns>fflbx__ProgramType__c</columns>
        <columns>fflbx__Namespace__c</columns>
        <columns>fflbx__ClassName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lockbox Process Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>